# trust_region

./: CMakeLists.txt  README.md  main.cpp  model.cpp  model.h  polynomial.h  region.cpp  region.h
cmake/: FindEigen.cmake
tests/: test_model.cpp
trust_lib/: CMakeLists.txt  model.cpp  model.h  polynomial.cpp  polynomial.h
